initital generate token

--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
 DISCOURSE_API_KEY=secret_key
 DISCOURSE_API_URL=http://localhost:3000
 DISCOURSE_API_USERNAME=eviltrout
+DISCOURSE_API_INPUT=filename
