fix fail from group names

--- a/env.example
+++ b/env.example
@@ -2,4 +2,4 @@ DISCOURSE_API_KEY=secret_key
 DISCOURSE_API_URL=http://localhost:3000
 DISCOURSE_API_USERNAME=eviltrout
 DISCOURSE_API_INPUT=filename
-DISCOURSE_API_GROUP_NAMES=
+DISCOURSE_API_GROUP_NAMES=security,support
