describe rake task and add output file in config

--- a/env.example
+++ b/env.example
@@ -1,4 +1,5 @@
+DISCOURSE_API_INPUT=tmp/input.csv
+DISCOURSE_API_OUTPUT=tmp/output.csv
 DISCOURSE_API_KEY=secret_key
 DISCOURSE_API_URL=http://localhost:3000
 DISCOURSE_API_USERNAME=eviltrout
-DISCOURSE_API_INPUT=filename
